fixed carousel img clipping on mobile

--- a/LudlowCSS.css
+++ b/LudlowCSS.css
@@ -12,7 +12,7 @@
 }
 .navBar{
 	position: fixed;
-	background: #fff;
+	background: rgba(255, 255, 255, 0.7);
 	z-index: 5; /*displays the element on top of any other box that ocupies the same "line" on the screen*/
 	width: 100%;
 	padding: 0 0;
@@ -21,7 +21,7 @@
 
 .navBar.sticky{
 	padding: 8px 0;
-	background: rgba(255, 255, 255, 0.7); /*sets up opacity in the background of the menu but not the text.*/
+	background: rgba(255, 255, 255, 1); /*sets up opacity in the background of the menu but not the text.*/
 }
 
 .navBar .logo img{
@@ -92,8 +92,46 @@
 	right: 30px;   /**/
 	top: 20px;     /*location of the "X" in the shrunk down menu*/
 }
+/*Carousel ==============================================================================================================================================================================================================================================*/
+/*========================================================================================================================================================================================================================================================*/
+#carousel{
+	position: absolute;
+	top: 30%;
+	width: 100%;
+}
+.carousel-inner{
+	width:100%;
+	height:100%;
+}
+.carousel-indicators{
+	z-index:1; /*indicators sit above the images*/
+}
 
+.item{
+	padding-left: 28%;
+}
+.item img{
+	width:100%;
+	min-width: 585px;
+}
+.item .carousel-caption{
+	-webkit-text-stroke: 1px white; /* width and color */
+	color: black;
+	z-index:1; /*captions sit on top of the images in carousel*/
+}
 
+.map{
+	padding-top: 10%;
+	width: 100%;
+	text-align:center;
+}
+.map h3{
+	font-size: 200%;
+	color: rgb(5,119,61);
+	font-weight: 700;
+}
+
+/*Responsive=================================================================================================================================================================================================================================================*/
 @media screen and (max-width: 868px) {
 	.icon{
 		display: block;
@@ -139,37 +177,4 @@
 	.item img{
 	width:100%;
 	}
-}
-/*========================================================================================================================================================================================================================================================*/
-#carousel{
-	position: absolute;
-	top: 30%;
-	width: 100%;
-}
-.carousel-indicators{
-	z-index:1; /*indicators sit above the images*/
-}
-
-.item{
-	padding-left: 28%;
-}
-.item img{
-	width:100%;
-	min-width: 585px;
-}
-.item .carousel-caption{
-	-webkit-text-stroke: 1px white; /* width and color */
-	color: black;
-	z-index:1; /*captions sit on top of the images in carousel*/
-}
-
-.map{
-	padding-top: 10%;
-	width: 100%;
-	text-align:center;
-}
-.map h3{
-	font-size: 200%;
-	color: rgb(5,119,61);
-	font-weight: 700;
 }
